--- a/join-waiting-list/index.html
+++ b/join-waiting-list/index.html
@@ -90,6 +90,10 @@
     </header>
     <!-- End Header -->
 
+    <!--  -->
+    <main id="main">&nbsp;</main>
+    <!-- End #main -->
+
     <!-- -->
     <footer id="footer" class="footer">
       <div class="footer-newsletter">
@@ -117,8 +121,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- End #main -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
