--- a/index.html
+++ b/index.html
@@ -298,10 +298,7 @@
                   <li>shared testing bots</li>
                   <li>7 days data retention</li>
                 </ul>
-                <a
-                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
-                  target="_blank"
-                  class="btn-buy"
+                <a href="/join-waiting-list/" target="_blank" class="btn-buy"
                   >Join waiting list</a
                 >
               </div>
@@ -330,10 +327,7 @@
                   <li>1 dedicated testing bot</li>
                   <li>14 days data retention</li>
                 </ul>
-                <a
-                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
-                  target="_blank"
-                  class="btn-buy"
+                <a href="/join-waiting-list/" target="_blank" class="btn-buy"
                   >Join waiting list</a
                 >
               </div>
@@ -361,10 +355,7 @@
                   <li>3 dedicated testing bots</li>
                   <li>30 days data retention</li>
                 </ul>
-                <a
-                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
-                  target="_blank"
-                  class="btn-buy"
+                <a href="/join-waiting-list/" target="_blank" class="btn-buy"
                   >Join waiting list</a
                 >
               </div>
@@ -391,10 +382,7 @@
                   <li>More data retention period</li>
                   <li>On-call support</li>
                 </ul>
-                <a
-                  href="https://share-eu1.hsforms.com/1hKKOdoFeTg-zBDyMg7zRCQ2b4ji9"
-                  target="_blank"
-                  class="btn-buy"
+                <a href="/join-waiting-list/" target="_blank" class="btn-buy"
                   >Join waiting list</a
                 >
               </div>
